--- a/internal/projects/bulleit/Interfaces/FilmDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/FilmDetailViewController.xib
@@ -95,7 +95,7 @@
 								<string key="NSFrame">{{15, 10}, {233, 36}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="18180027"/>
+								<reference key="NSNextKeyView" ref="541365456"/>
 								<reference key="IBUIBackgroundColor" ref="715238449"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -119,7 +119,7 @@
 							<object class="IBUILabel" id="18180027">
 								<reference key="NSNextResponder" ref="582508261"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{15, 37}, {200, 21}}</string>
+								<string key="NSFrame">{{64, 37}, {154, 21}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="101078116"/>
@@ -287,6 +287,20 @@
 									<string key="NSResourceName">gradient_background.png</string>
 								</object>
 							</object>
+							<object class="IBUIImageView" id="541365456">
+								<reference key="NSNextResponder" ref="582508261"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{15, 42}, {44, 11}}</string>
+								<reference key="NSSuperview" ref="582508261"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="18180027"/>
+								<string key="NSReuseIdentifierKey">_NS:541</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<float key="IBUIAlpha">0.40000000596046448</float>
+								<int key="IBUIContentMode">1</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
 						</object>
 						<string key="NSFrameSize">{320, 416}</string>
 						<reference key="NSSuperview" ref="191373211"/>
@@ -426,6 +440,14 @@
 					</object>
 					<int key="connectionID">34</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">ratingView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="541365456"/>
+					</object>
+					<int key="connectionID">37</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -441,8 +463,8 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="582508261"/>
 							<reference ref="379087290"/>
+							<reference ref="582508261"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -469,6 +491,7 @@
 							<reference ref="882476180"/>
 							<reference ref="951634253"/>
 							<reference ref="101078116"/>
+							<reference ref="541365456"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -552,6 +575,12 @@
 						<reference key="parent" ref="882476180"/>
 						<string key="objectName">Grey Line View</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">36</int>
+						<reference key="object" ref="541365456"/>
+						<reference key="parent" ref="582508261"/>
+						<string key="objectName">Affiliate Logo Image</string>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -572,6 +601,7 @@
 					<string>29.IBPluginDependency</string>
 					<string>32.IBPluginDependency</string>
 					<string>33.IBPluginDependency</string>
+					<string>36.IBPluginDependency</string>
 					<string>4.IBPluginDependency</string>
 					<string>4.IBUserGuides</string>
 					<string>6.IBPluginDependency</string>
@@ -613,6 +643,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="IBUserGuide">
@@ -639,7 +670,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">34</int>
+			<int key="maxID">37</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -742,9 +773,11 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>affiliateLogoView</string>
 							<string>imageView</string>
+							<string>ratingView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIImageView</string>
 							<string>UIImageView</string>
 							<string>UIImageView</string>
 						</object>
@@ -755,6 +788,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>affiliateLogoView</string>
 							<string>imageView</string>
+							<string>ratingView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -764,6 +798,10 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">imageView</string>
+								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">ratingView</string>
 								<string key="candidateClassName">UIImageView</string>
 							</object>
 						</object>
