eDetail now supports text wrapping courtesy of CoreText.

--- a/internal/projects/bulleit/Interfaces/GenericItemDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/GenericItemDetailViewController.xib
@@ -52,7 +52,6 @@
 						<string key="NSFrame">{{150, 198}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -255,12 +254,13 @@
 							</object>
 							<object class="IBUIImageView" id="951634253">
 								<reference key="NSNextResponder" ref="582508261"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">289</int>
 								<string key="NSFrame">{{207, 42}, {98, 144}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="986170066"/>
 								<string key="NSReuseIdentifierKey">_NS:541</string>
+								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
@@ -448,6 +448,7 @@
 							<reference ref="951634253"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
+						<string key="objectName">Scroll View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
