Pushing Eli's updates

--- a/sites/stamped.com/bin/www/templates/index.html
+++ b/sites/stamped.com/bin/www/templates/index.html
@@ -25,7 +25,7 @@
     <body>
         <div id="home" class="wrap flood">
             <div class="iphone">
-                <div class="brand replaced">Stamped</div>
+                <a href="." class="brand replaced">Stamped</a>
                 <p class="pitch replaced">We're building a new way to put your stamp of approval on the world.</p>
                 <div class="signup">
                     <p>Sign up to be notified when we go live.</p>
