--- a/sites/stamped.com/bin/www/templates/about.html
+++ b/sites/stamped.com/bin/www/templates/about.html
@@ -27,7 +27,7 @@
             <div class="wrap">
             <div class="sheet">
                 <div class="top-wave"></div>
-                <div class="brand replaced">Stamped</div>
+                <a href="." class="brand replaced">Stamped</a>
                 <div class="inner">
                 <div class="mission replaced">
                     <p>Our mission is to build a platform for friends to help each other discover the 
@@ -166,5 +166,5 @@ best parts of their world.</p>
         <script type="text/javascript">
             stamped.init();
         </script>
-    </body>
-</html>
+    </body><script type="text/javascript">var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-24470954-1']);_gaq.push(['_trackPageview']);(function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
+ </html>
