--- a/sites/stamped.com/bin/www/templates/sdetail.html
+++ b/sites/stamped.com/bin/www/templates/sdetail.html
@@ -54,7 +54,7 @@
                 </div> 
             </div> 
             <div class="wrap"> 
-                <div class="brand replaced">Stamped</div> 
+                <a href="." class="brand replaced">Stamped</a>
                 <div class="coming-soon replaced">Coming soon to the App Store</div> 
                 <div class="card"> 
                     <div class="top-wave"></div> 
@@ -72,7 +72,10 @@
                             <span class="author"><span class="user">{{ user.screen_name }}</span> stamped</span> 
                             <p>{{ blurb }}</p> 
                             {% if credit %}
-                            <div class="credit">Credit to 
+                            <div class="credit">
+                            <span class="stamp stamp-1 replaced">{{ credit.0.screen_name }}</span>
+                            <span class="stamp stamp-2 replaced">{{ user.scree_name }}</span>
+                            Credit to 
                             {% if credit|length >= 4 %}
                             <span class="user">{{ credit.0.screen_name }}</span>,
                             <span class="user">{{ credit.1.screen_name }}</span>
@@ -102,4 +105,5 @@
             stamped.init();
         </script> 
     </body> 
+    <script type="text/javascript">var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-24470954-1']);_gaq.push(['_trackPageview']);(function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
 </html>
