--- a/sites/stamped.com/bin/www/templates/sdetail-mobile.html
+++ b/sites/stamped.com/bin/www/templates/sdetail-mobile.html
@@ -60,7 +60,7 @@
                             {% if credit %}
                             <div class="credit">
                             <span class="stamp stamp-1 replaced">{{ credit.0.screen_name }}</span>
-                            <span class="stamp stamp-2 replaced">{{ user.scree_name }}</span>
+                            <span class="stamp stamp-2 replaced">{{ user.screen_name }}</span>
                             Credit to 
                             {% if credit|length >= 4 %}
                             <span class="user">{{ credit.0.screen_name }}</span>,
